<resources>
    <string name="app_name">BeerRun</string>
    <string name="beer_styles">Beer Styles</string>
    <string name="brewery_search">Brewery Search</string>
    <string name="beer_search">beer search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beer_run_logo">beer_run_logo</string>
    <string name="place_holder">place_holder</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="login">LOGIN</string>
    <string name="create">Create</string>
    <string name="refresh">Refresh</string>
    <string name="home_option">Home</string>
    <string name="quit">QUIT</string>
    <string name="wish_list">Wish List</string>
    <string name="back">back</string>
</resources>
