<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/beer_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/beer_run_logo"
        android:src="@drawable/beer_run"
        />

    <Button
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@+id/beer_logo"
        android:layout_centerInParent="true"
        android:elevation="10dp"
        android:translationZ="10dp"
        />

    <Button
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwd"
        android:layout_marginTop="5dp"
        android:text="@string/create"
        android:textSize="12sp"
        android:visibility="gone"
        android:layout_centerInParent="true"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@id/create_account"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:elevation="10dp"
        android:translationZ="10dp"
        android:text="@string/login"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/beer_logo"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="text"
        android:nextFocusDown="@+id/passwd"
        android:textColorHighlight="@android:color/holo_green_light"
        android:textSize="20sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/passwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHighlight="@android:color/holo_green_light"
        android:textSize="20sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/submitButton"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/passwd"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:background="@drawable/runner"
        android:layout_width="65dp"
        android:layout_height="wrap_content" />

</RelativeLayout>